@@ -1,5 +1,6 @@
 :- asserta(file_search_path(foreign, '.')).
 :- asserta(file_search_path(jpl_examples, 'examples/prolog')).
+:- asserta(file_search_path(jar, '.')).
 
 :- [jpl].
 
