@@ -1,3 +1,7 @@
+May 24, 2004
+
+  * ADDED: Initial test suite (check.pl)
+
 May 14, 2004
 
   * JW: Added Makefile for jpl.jar
